--- a/CSS/mediservice_styles_2.css
+++ b/CSS/mediservice_styles_2.css
@@ -1,45 +1,78 @@
 @media screen and (min-width: 768px){
-/*CSS for nav bar*/
-.navbar{
-	padding:0;
-}
-#navbar_supported_content {
-    position: unset;
-}
-.nav-item {
-    background:transparent;
-    height: 60px;
-    padding-top: 10px;
-}
-.nav-item a {
-	font-size: 15px;
-	font-weight: bold;
-    text-transform: uppercase;
-}
-/*CSS for Article*/
-.why-choose-us-container{
-	padding-bottom: 25px;
-}
-.why-choose-us-paragraph{
-	min-height: 200px;
-	font-size: 14.5px;
-}
-#stetho_logo{
-	display: inline;
-	float:right;
-	padding:10px 0 0 30px;
-	max-width: 200px;
-	max-height:225px;
-}
-/*CSS for department*/
-.dept-container{
-	margin-top: 0;
-}
-.dept-header{
-	padding-top: 5px;
-}
-.dept-item{
-    margin: 25px 0 0;
-    height: auto;
-}
+	.container{
+		max-width: 992px;
+	}
+	.appoinment-btn{
+		margin-right: 25px;
+	}
+	.navbar{
+		padding:0 15px 10px 0;
+	}
+	#navbar_logo {
+		padding-top: 10px;
+		height: 53px;
+		padding-left: 25px;
+	}
+	#navbar_supported_content {
+	    position: relative;
+	    z-index: 1;
+	    top: 0px;
+	}
+	.nav-item {
+	    background:transparent;
+	    height: 60px;
+	    margin-top: 10px;
+	    padding-top: 10px;
+	}
+	.nav-item a {
+		font-size: 14px;
+		font-weight: bold;
+	    text-transform: uppercase;
+	}
+	.fluid-banner{
+		height: 335px;
+	}
+	#why_choose_us{
+		padding-bottom: 24px;
+		padding-left: 20px;
+	}
+	#body_image{
+		display:inline;
+		float: right;
+		padding-top: 5px;
+		padding-left: 30px;
+	}
+	#stetho_logo{
+		width: 165px;
+	}
+	#paragraph{
+		min-height: 225px;
+		font-size: 14.5px;
+		line-height: 25px;
+		margin-bottom: 2px;
+	}
+	.capsule-col{
+		flex: none;
+		width: auto;
+		padding-top: 0;
+	}
+	#department{
+		margin-top: 0;
+		padding-left: 20px;
+		padding-right:15px;
+	}
+	.department-header{
+		padding-bottom: 18px;
+	}
+	.department-col{
+		flex: none;
+		width: auto;
+	}
+	#more_logo
+	{
+		width: 80px;
+		float: right;
+		padding-right: 10px;
+		margin-bottom: 80%;
+	}
 }
